--- a/totaalbedrag.css
+++ b/totaalbedrag.css
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Sjabloon</title>
-    </head>
-    <body>
-        <script>
-        
-        </script>
-    </body>
-</html>
+.container{
+    background-color: lightgray;
+}
